<resources>
    <string name="app_name">Nihongo Naraimashou</string>
    <string name="title_account">Account</string>
    <string name="title_exam">Exam</string>
    <string name="title_report">Record</string>
    <string name="title_lesson">Lesson</string>
    <string name="title_home">Home</string>
    <string name="title_activity_writing">WritingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="intro1"> Hi welcome to nihongō naraimashō or “let’s learn Japanese language” in English. nihongō naraimashō will teach you how to read and write hiragana, katakana and kanji, it will also teach you the pronunciation.</string>
    <string name="intro2">In Japanese writing system it’s start from right to left(vertical)writing in this application. We will use the western style which is from left to right(horizontal). Japanese sentence don’t use question mark they use “  。” only for any sentence. </string>
    <string name="intro3">Now for writing hiragana and katakana they use small “っ” (tsu) for double consonant for example gakkou “がっこう”  the tsu here is for repeating the  consonant k, same thing with the katakana but in case of “konnichiwa”  you will not write it like こっにちは(note: this is wrong) because in hiragana and katakana there is “ん” or the “n” so you should write it like this こんにちは</string>
    <string name="intro4">From the example above, take a look at the end the “wa” is written as “は” or “ha”, but you will read it as “wa”, this is called particles (preposition). Another example “watashi wa” written as “わたし　は” (note: watashi is a Japanese word so you will not write it as “はたし”=hatashi because it is not a particle). There is also particle like “へ” you write it as “he” but read it as “e” (note: you will encounter this in lesson 5) and lastly, the “を” you write it as “wo” but read it as “o” (note: you will encounter this in lesson 6).</string>
    <string name="lesson1_a">In the vocabulary section you will notice that there is only “1 to 10” only and the number “4,7,9” have two meanings. You will encounter the other use of it on upcoming lessons. </string>
    <string name="lesson1_b">You need only “1 to 10” in Japanese to count up to 99. The trick is simple, for example 11 = 10 + 1  read as “juu ichi”. 20 = 2 x 10 read as “ni juu”, 35 = 3 x 10 + 5 “san juu go”. You need to read it left to right for example, “56” it will be read as “go”(5) then “juu” it is telling how many tens then “roku”(6). Note: for counting use “yon” for “4”, “nana” for “7” and “kyuu” for “9”</string>
    <string name="lesson1_c">Now that you know how to count “1 to 99” you can also tell age from 1 year old up to 99 years old by adding the suffix “sai/さい” number  + sai  = age.  Example:  issai(note: not ichi sai), ni sai, san sai, yon sai, go sai, roku sai, nana sai, hassai(note: not hachi sai), kyu sai, jussai(note: for 20 years old use hatachi). You can see that there are double ss from one year old 8 years old and 10 years old. Number will fall for that number like 11(juu issai), 21(ni juu issai), 88 hachi juu hassai, 78(nana juu hassai), 30(san jussai) and so on you need to use that.   </string>
    <string name="lesson1_d">For the nationality you just need to use the suffix jin together with the country. Example Japanese, “nihon jin”, Korean “kankoku jin”</string>
    <string name="lesson1_e">For the sentence pattern “S wa I desu” where “S” is the subject, “I” is information to the subject and last is “desu” which is “is, are, am. Example: (Mr. Miller is 20 years old.-->Miller san wa hatachi desu.) (Ms. Amata is a teacher.-->Amata san wa sensei desu.)</string>
    <string name="lesson1_f">How about if you’re going to say (Mr. Miller is not 20 years old.--> Miller san wa hatachi ja arimasen/dewa arimasen) the same pattern is apply but you use “ja arimasen” or “dewa arimasen” for “not”</string>
    <string name="lesson1_g">For the sentence pattern for asking or interrogative sentence “S wa Int desu ka” where Int is for interrogatives word(note: particle ka is use for asking questions and this pattern will use thought of the other lessons). Example: nansai, dare, donata, doko, Example. (How old are you? --> anata wa nansai desu ka.) (who are you? --> anata wa dare desu ka.)</string>
    <string name="lesson1_h">Some question are answerable by yes or no. Is mr. miller is 20 years old? Yes mr. miller is 20 years old or no mr. miller is not 20 years old. In this case you just use the hai and iie. </string>
    <string name="lesson1_i">Particles usage(preposition) in this lesson there are two particles which is “no” and “mo” particle no is use for noun modifiers.(note: noun1 no noun2) example mr. miller is a ABC’s trainee. --> miller san wa abc no kenshuusei desu. As for “mo” it means also or too. Example: (mr. miller is a ABC’s trainee. --> miller san wa abc no kenshuusei desu.) Ms. Yamada is also a abc’s trainee. --> Yamada san mo kenshuusei desu(note: that the particle “wa” is change to “mo”)</string>
    <string name="lesson2_a">“Kore” use when the speaker is near the object then the listener is far from the object, “sore” is use when the speaker is far from the object then the listener is near from the object lastly “are” use when both speaker and listener far from the object.</string>
    <string name="lesson2_b">For the sentence pattern “kore, sore, are wa object desu.”. Example: (kore wa hon desu --> this is a book), (sore wa hon desu. --> that is a book), (are wa hon desu. --> that thing over there is a book.) Next is the “desu ka desu ka pattern” which is “or” in English Example: (kore wa hon desu ka zasshi desu ka.) --> is this a book or a magazine?. The kono sono ano is same usage but kono sono ano is always followed by noun. Example: (kono hon wa watashi no desu. --> this book is mine.)</string>
    <string name="lesson2_c">The particle in this lesson is “no” which has two usage telling ownership and telling type, brand, and kind, Example: (kore wa nike no kaban desu --> This is a nike bag) in this sentence it tells brand of a bag. (kore wa yamada san no kaban desu --> This is Mr. Yamada’s bag.)Therefore when asking or the interrogative for this is “nan no” and “dare no”(note: the sentence pattern for interrogatives is in lesson 1 grammar section)</string>
    <string name="lesson3_a">In this lesson is somewhat similar to lesson 2 but this time where going to talk about places. In previous lesson we use kore, sore, are to distinguish position of a speaker and a listener. Here in lesson 3, were going to use koko, soko asoko  cause we are going to talk about places.</string>
    <string name="lesson3_b">For the sentence pattern “koko, soko, asoko wa PLACE desu”, Example: (koko wa toire desu --> here is the toilet. ), (soko wa toire desu --> there is the toilet),  (asoko wa toire desu. --> that place over there is the toilet.) it can be reversible  “PLACE wa koko, soko, asoko desu.” As for asking for country the sentence is “name –san no oku ni wa dochira desu ka.” and for company “name –san no kaisha wa dochira desu ka”</string>
    <string name="lesson5_a">In this lesson is all about using ikimasu, kimasu, kaerimasu. The sentence pattern for this lesson is “subject wa COMPANION to TRANSPORTATION de PLACE e ikimasu, kimasu, kaerimasu. Example: (I will go to japan by airplane with my friend --> watashi wa tomodachi to hikouki de nihon e ikimasu.) it’s not necessary to be in that order, it be ramble like PLACE e COMPANION to TRANSPORTION de ikimasu, kimasu, kaerimasu. It can be in any order just be the right use of particles.</string>
    <string name="lesson5_c">The particle here is “to” use for companion which the interrogative is “dare to” asking for companion. Particle “de” which the interrogative is “nan de” which asks the transportation.  Particle “e” which the interrogative is “doko e” ask for place going to, came or returning.</string>
    <string name="lesson5_d">If you’re going to say “alone” it’s fix for the “hitori de” and as for the “by foot” you don’t need to put particle “de” on it. if you’re going to say you that you don’t go anywhere or didn’t go anywhere “doko mo negative of the verb. “doko mo ikimasen, doko mo ikimasendeshita)</string>
    <string name="lesson9_a">In this lesson is about possession, ability and preferences. Transitive is use by particle “を” here we are going to use particle “が”. Sentence pattern is (Noun が あります/わかります) </string>
    <string name="lesson9_b">You already know the use of どんな here it can also be use but need to be followed by a category. Example: (どんな たべもの が すき です か。--> what kind of food do you like?). There are also several adverb of degree in here. よく/だいたい/すこし/あまり/せんせん can be used in わかります while たくさん/すこし/あまり/ぜんぜん can be used in あります note: remember when using あまり/ぜんぜん the verb/adjectives should be in negative form.</string>
    <string name="lesson9_c">For asking reason you can use “どうして” then make sure state the reason first then put “から”. The “から” here is not “from” but becomes because. “ねつ が あります から かいしゃ を やすみます。” just like the example the reason here is the sentence after the “から” unlike in English after because is the reason.</string>
    <string name="lesson11_a">You leaned in previous lesson about telling about existence of object or person, this time we are going identify the numbers of objects or person by adding the right quantifiers for example we use “なんにん” for person. “なんだい” for machine or vehicles and so on and so forth.</string>
    <string name="lesson11_b">As for the interrogatives いくつ is used for general question for “how many” things which counted by ひとつ ふたつ and so on. There is also “どのくらい” for how long</string>
    <string name="lesson11_c">Quantifier に ーかい Verb. This sentence pattern says how often you do the action.</string>
    <string name="lesson11_d">Note: that －かい for floor and －かい for frequency is the same but 3rd floor is さんがい and interrogatives is なんがい while frequency さんかい(thrice) and the interrogative is なんかい</string>
    <string name="lesson13_a">In this lesson you will learned what you want and another conjugation for verb.</string>
    <string name="lesson13_b">Noun が ほしい です This sentence pattern is used to express the speaker’s desire to possess or have an object. It can also be used to ask what the listener wants. The object is marked with the particle が ほしいis an i adjective.</string>
    <string name="lesson13_c">Vますーformたいです a verb when it is used with ます is called Vますーform. Example かいます,　かい is the ますform. This expresses the speaker’s desire to the certain verb. たい is a i adjective. Using たいform the verb becomes “want” (want to buy かいたい です) (want to drinkのみたい です)</string>
    <string name="lesson13_d">Note: ほしいですor たいです cannot be used to describe third person’s desire. Another thing is neither ほしいですかnor たいですか when you offering something or invite someone to do something. For example you offer a cup of coffee (or invite the listener to have a cup of coffee), you should not say コーヒー は ほしい です か。nor should you say コーヒー を のみたい です か。You should use いかがですか。のみませんか</string>
    <string name="lesson13_e">Place へ Noun/Vますformに いきます/きます/かえりますthis sentence pattern is somewhat similar to lesson 5 but this time you can use this pattern to state the purpose going to a certain place.</string>
    <string name="lesson13_f">About the particle に use for the verb はいります/のります and particle を for でます/おります when entering or riding you should particle に while getting off or getting out you should use particle を</string>
</resources>