<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/lesson1part1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_a" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part2"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_b" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part3"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_c" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part4"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_d" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part5"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_e" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part6"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_f" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part7"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_g" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part8"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_h" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson1part9"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson1part8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_i" />
    </RelativeLayout>
</ScrollView>
