<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/lesson2part1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson2_a" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson2part2"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson2part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson2_b" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson2part3"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson2part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson2_c" />

    </RelativeLayout>
</ScrollView>