<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/lesson9part1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson9_a" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part2"
            android:layout_below="@+id/lesson9part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Nounがすき です/きらい です/じょうず です/へた です。)" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part3"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson9part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="わたしは じてんしゃ が あります。" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part4"
            android:layout_below="@+id/lesson9part3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="わたし は にほんご が わかります。" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part5"
            android:layout_below="@+id/lesson9part4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="わたし は うた が すき です。" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part6"
            android:layout_below="@+id/lesson9part5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="わたし は うた が きらい です。" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part7"
            android:layout_below="@+id/lesson9part6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="わたし は うた が じょうず です。" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part8"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson9part7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson9_b" />
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textSize="20sp"
            android:id="@+id/lesson9part9"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lesson9part8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson9_c" />




    </RelativeLayout>
</ScrollView>